welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: value Green is not a member of object java.awt.Color
		    if(getCouleurSol()==Color.Green){
                                              ^SlugTracking:6: error: value Green is not a member of object java.awt.Color
			return Color.Green
                                     ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if(estFaceMur()==true){
                ^