welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	
		    if(getCouleurSol()==Color.Green){
			avance();
			return Color.Green
		}
		if(estFaceMur()==true){
			return false ;
		
	}
		}
	
